resources/gitops-config/applications/emqx/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emqx
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    gateway.damman.tech/svc-gateway: "true"
